<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.inf0251atrabalho3.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_average"
        android:name="com.example.inf0251atrabalho3.ui.average.AverageFragment"
        android:label="@string/menu_average"
        tools:layout="@layout/fragment_average" />

    <fragment
        android:id="@+id/nav_historic"
        android:name="com.example.inf0251atrabalho3.ui.historic.HistoricFragment"
        android:label="@string/menu_historic"
        tools:layout="@layout/fragment_historic" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.inf0251atrabalho3.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>